external-dns/dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=kubernetes.evewaha.com # Permettra à ExternalDNS de ne voir que les zone qui correspondant au domain hebergé, ne va pas prendre en considération les autres hosted zone
        - --provider=aws
        - --policy=upsert-only # Ne permet pas à ExternalDNS de supprimer des records dns
        - --aws-zone-type=public # ne traitera que les hosted zone publique
        - --registry=txt
        - --txt-owner-id=kubernetes.evewaha.com
