external-dns/helloworld-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v2
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
      - name: k8s-demo
        image: 411953124370.dkr.ecr.eu-west-1.amazonaws.com/go-docker:v2
        ports:
        - name: go-port
          containerPort: 9000
      imagePullSecrets:
        - name: regcred    
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: helloworld-v2
